<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BluetoothController</string>
    <string name="button_text">Send</string>
    <string name="action_settings">Settings</string>
    <string name="unsupport_bluetooth">This device doesn\'t support bluetooth.</string>
    <string name="disable_bluetooth">Please enable Bluetooth and try again.</string>
    <string name="led_yellow_on_button_text">Yellow On</string>
    <string name="led_yellow_off_button_text">Yellow Off</string>
    <string name="led_red_on_button_text">Red On</string>
    <string name="led_red_off_button_text">Red Off</string>
    <string name="led_blue_on_button_text">Blue On</string>
    <string name="led_blue_off_button_text">Blue Off</string>
    <string name="photo_button_text">Take a Photo</string>
    <string name="exit_button_text">Exit</string>
    <string name="image_text">Image</string>
</resources>
